[package]
name = "pokefun-truelayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
clap = "2.33.3"
reqwest = "0.11.4"
reqwest-middleware = "0.1.1"
reqwest-tracing = "0.1.2"
serde = "1.0.130"
structopt = "0.3.23"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"

[dev-dependencies]
actix-http = "3.0.0-beta.9"
actix-rt = "2.2.0"
